@@ -162,7 +162,8 @@ class Molecule(object):
     (refer to the Open Babel library documentation for more info).
     
     Methods:
-       addh(), calcfp(), calcdesc(), draw(), localopt(), make3D(), removeh(), write() 
+       addh(), calcfp(), calcdesc(), draw(), localopt(), make3D(), removeh(),
+       write() 
       
     The original Open Babel molecule can be accessed using the attribute:
        OBMol
@@ -246,7 +247,8 @@ class Molecule(object):
            descnames -- a list of names of descriptors
 
         If descnames is not specified, the full list of Open Babel
-        descriptors is calculated: LogP, PSA and MR.
+        descriptors is calculated. See pybel.descs for a list
+        of available descriptors.
         """
         if not descnames:
             descnames = descs
@@ -299,6 +301,7 @@ class Molecule(object):
             if not overwrite and os.path.isfile(filename):
                 raise IOError, "%s already exists. Use 'overwrite=True' to overwrite it." % filename
             obconversion.WriteFile(self.OBMol,filename)
+            obconversion.CloseOutFile()
         else:
             return obconversion.WriteString(self.OBMol)
 
@@ -309,12 +312,12 @@ class Molecule(object):
            forcefield -- default is "MMFF94"
            steps -- default is 500
 
-        If the molecule does not have 2D or 3D coordinates, make3D() is
+        If the molecule does not have any coordinates, make3D() is
         called before the optimization. Note that the molecule needs
         to have explicit hydrogens. If not, call addh().
         """
         
-        if not (self.OBMol.Has2D() or self.OBMol.Has3D()):
+	if not (self.OBMol.HasNonZeroCoords()):
             self.make3D()
         ff = _forcefields[forcefield]
         ff.Setup(self.OBMol)
